--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <script src="https://unpkg.com/kaboom@3000.0.1/dist/kaboom.js"></script>
     <script src="JS/main.js"></script>
+    <script src="JS/scrolling.js"></script>
 </body>
 </html>
