Début barre de chargement

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <script src="https://unpkg.com/kaboom@3000.0.1/dist/kaboom.js"></script>
     <script src="JS/main.js"></script>
-    <script src="JS/scrolling.js"></script>
+    <script src="scrolling.js"></script>
+    <script src="JS/jauge.js"></script>
 </body>
 </html>
