Added obstacle custom component

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <script src="JS/jauge.js"></script>
     <script src="JS/onUpdate.js"></script>
     <script src="JS/commands.js"></script>
+    <script src="JS/obstacle.js"></script>
 </body>
 </html>
