Added player + obstacles on terrain

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <script src="JS/onUpdate.js"></script>
     <script src="JS/commands.js"></script>
     <script src="JS/obstacle.js"></script>
+    <script src="JS/player.js"></script>
 </body>
 </html>
