--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <script src="https://unpkg.com/kaboom@3000.0.1/dist/kaboom.js"></script>
     <script src="JS/main.js"></script>
     <script src="JS/loadAssets.js"></script>
+    <script src="JS/homeScreen.js"></script>
     <script src="JS/scrolling.js"></script>
     <script src="JS/jauge.js"></script>
-    <script src="JS/commands.js"></script>
+    <script src="JS/game.js"></script>
     <script src="JS/obstacle.js"></script>
     <script src="JS/obstacleManager.js"></script>
-    <script src="JS/player.js"></script>
 </body>
 </html>
