--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <script src="https://unpkg.com/kaboom@3000.0.1/dist/kaboom.js"></script>
+    <script src='http://git.io/perlin.js'></script> <!-- https://github.com/joeiddon/perlin -->
     <script src="JS/main.js"></script>
     <script src="JS/loadAssets.js"></script>
     <script src="JS/homeScreen.js"></script>
