ajout d'un mode debug
Marqueurs pour game design

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="JS/game.js"></script>
     <script src="JS/obstacle.js"></script>
     <script src="JS/obstacleManager.js"></script>
+    <script src="JS/debug.js"></script>
 </body>
 
 </html>
