--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
     <script src="JS/main.js"></script>
     <script src="JS/loadAssets.js"></script>
     <script src="JS/homeScreen.js"></script>
+    <script src="JS/player.js"></script>
     <script src="JS/scrolling.js"></script>
     <script src="JS/jauge.js"></script>
     <script src="JS/game.js"></script>
     <script src="JS/obstacle.js"></script>
     <script src="JS/obstacleManager.js"></script>
+    <script src="JS/gameEnd.js"></script>
     <script src="JS/debug.js"></script>
 </body>
 
