--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="JS/main.js"></script>
     <script src="JS/loadAssets.js"></script>
     <script src="JS/homeScreen.js"></script>
+    <script src="JS/controls.js"></script>
     <script src="JS/player.js"></script>
     <script src="JS/scrolling.js"></script>
     <script src="JS/jauge.js"></script>
