#2 Tried giving friends a behaviour

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <script src="JS/scrolling.js"></script>
     <script src="JS/jauge.js"></script>
     <script src="JS/game.js"></script>
-    <script src="JS/obstacle.js"></script>
-    <script src="JS/obstacleManager.js"></script>
+    <script src="JS/entities.js"></script>
+    <script src="JS/entitiesManager.js"></script>
     <script src="JS/gameEnd.js"></script>
     <script src="JS/debug.js"></script>
 </body>
