--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UNIL | Voeux</title>
     <link rel="stylesheet" href="CSS/main.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="Assets/images/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="Assets/images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="Assets/images/favicon/favicon-16x16.png">
+    <link rel="icon" type="image/x-icon" href="Assets/images/favicon/favicon.ico">
+    <link rel="manifest" href="Assets/images/favicon/site.webmanifest">
 </head>
 
 <body>
