text outlining and placement #11

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src='http://git.io/perlin.js'></script> <!-- https://github.com/joeiddon/perlin -->
     <script src="JS/main.js"></script>
     <script src="JS/loadAssets.js"></script>
+    <script src="JS/texteManager.js"></script>
     <script src="JS/homeScreen.js"></script>
     <script src="JS/controls.js"></script>
     <script src="JS/player.js"></script>
