--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <script src="https://unpkg.com/kaboom@3000.1.8/dist/kaboom.js"></script>
-    <script src='http://git.io/perlin.js'></script> <!-- https://github.com/joeiddon/perlin -->
+    <script src='https://git.io/perlin.js'></script> <!-- https://github.com/joeiddon/perlin -->
     <script src="JS/main.js"></script>
     <script src="JS/loadAssets.js"></script>
     <script src="JS/texteManager.js"></script>
