Added most of the sounds

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
     <script src="https://unpkg.com/kaboom@3000.1.12/dist/kaboom.js"></script>
     <script src='https://git.io/perlin.js'></script> <!-- https://github.com/joeiddon/perlin -->
+    <script src="JS/helpers.js"></script>
     <script src="JS/main.js"></script>
     <script src="JS/loadAssets.js"></script>
     <script src="JS/texteManager.js"></script>
