--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <script src="JS/controls.js"></script>
     <script src="JS/player.js"></script>
     <script src="JS/scrolling.js"></script>
-    <script src="JS/jauge.js"></script>
+    <!-- <script src="JS/jauge.js"></script> -->
     <script src="JS/game.js"></script>
     <script src="JS/entities.js"></script>
     <script src="JS/entitiesManager.js"></script>
