Added start screen for music during homeScreen

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script src="JS/main.js"></script>
     <script src="JS/loadAssets.js"></script>
     <script src="JS/texteManager.js"></script>
+    <script src="JS/startScreen.js"></script>
     <script src="JS/homeScreen.js"></script>
     <script src="JS/controls.js"></script>
     <script src="JS/player.js"></script>
