--- a/index.html
+++ b/index.html
@@ -5,32 +5,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UNIL | Voeux</title>
-    <link rel="stylesheet" href="CSS/main.css">
-    <link rel="apple-touch-icon" sizes="180x180" href="Assets/images/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="Assets/images/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="Assets/images/favicon/favicon-16x16.png">
-    <link rel="icon" type="image/x-icon" href="Assets/images/favicon/favicon.ico">
-    <link rel="manifest" href="Assets/images/favicon/site.webmanifest">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon/favicon-16x16.png">
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon/favicon.ico">
+    <link rel="manifest" href="assets/images/favicon/site.webmanifest">
 </head>
 
 <body>
     <script src="https://unpkg.com/kaboom@3000.1.12/dist/kaboom.js"></script>
     <script src='https://git.io/perlin.js'></script> <!-- https://github.com/joeiddon/perlin -->
-    <script src="JS/helpers.js"></script>
-    <script src="JS/main.js"></script>
-    <script src="JS/loadAssets.js"></script>
-    <script src="JS/texteManager.js"></script>
-    <script src="JS/startScreen.js"></script>
-    <script src="JS/homeScreen.js"></script>
-    <script src="JS/controls.js"></script>
-    <script src="JS/player.js"></script>
-    <script src="JS/scrolling.js"></script>
-    <!-- <script src="JS/jauge.js"></script> -->
-    <script src="JS/game.js"></script>
-    <script src="JS/entities.js"></script>
-    <script src="JS/entitiesManager.js"></script>
-    <script src="JS/gameEnd.js"></script>
-    <script src="JS/debug.js"></script>
+    <script src="js/helpers.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/load-assets.js"></script>
+    <script src="js/text-manager.js"></script>
+    <script src="js/start-screen.js"></script>
+    <script src="js/home-screen.js"></script>
+    <script src="js/controls.js"></script>
+    <script src="js/player.js"></script>
+    <script src="js/scrolling.js"></script>
+    <!-- <script src="js/jauge.js"></script> -->
+    <script src="js/game.js"></script>
+    <script src="js/entities.js"></script>
+    <script src="js/entities-manager.js"></script>
+    <script src="js/game-end.js"></script>
+    <script src="js/debug.js"></script>
 </body>
 
 </html>
