Big refactoring to ES6 modules

--- a/index.html
+++ b/index.html
@@ -14,23 +14,7 @@
 </head>
 
 <body>
-    <script src="https://unpkg.com/kaboom@3000.1.12/dist/kaboom.js"></script>
-    <script src='https://git.io/perlin.js'></script> <!-- https://github.com/joeiddon/perlin -->
-    <script src="js/helpers.js"></script>
-    <script src="js/main.js"></script>
-    <script src="js/load-assets.js"></script>
-    <script src="js/text-manager.js"></script>
-    <script src="js/start-screen.js"></script>
-    <script src="js/home-screen.js"></script>
-    <script src="js/controls.js"></script>
-    <script src="js/player.js"></script>
-    <script src="js/scrolling.js"></script>
-    <!-- <script src="js/jauge.js"></script> -->
-    <script src="js/game.js"></script>
-    <script src="js/entities.js"></script>
-    <script src="js/entities-manager.js"></script>
-    <script src="js/game-end.js"></script>
-    <script src="js/debug.js"></script>
+    <script src="js/main.js" type="module" async></script>
 </body>
 
 </html>
