--- a/index.html
+++ b/index.html
@@ -18,6 +18,26 @@
     <noscript>
         <p style="margin-top: 10vh; text-align: center;">Oh non, votre navigateur ne supporte pas javascript ou il est peut-être désactivé. <a href="https://unil.ch/voeux/sheep-it.html">Suivez ce lien</a> pour en savoir plus sur ce jeu vidéo UNIL.</p>
     </noscript>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-F4GC0TNEND"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-F4GC0TNEND');
+    </script>
+
+    <!-- Google Analytics OLD -->
+    <script>
+        (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+        function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+        e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+        e.src='https://www.google-analytics.com/analytics.js';
+        r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+        ga('create','UA-19466870-2');ga('send','pageview');
+    </script>
 </body>
 
 </html>
