Best attempt at being compatible with older Safari versions

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 </head>
 
 <body>
-    <script src="https://unpkg.com/kaboom@3000.1.17/dist/kaboom.js"></script>
+    <script src="vendor/resize-observer.min.js"></script>
+    <script src="vendor/kaboom.js"></script>
     <script src="js/main.js" type="module"></script>
     <noscript>
         <p style="margin-top: 10vh; text-align: center;">Oh non, votre navigateur ne supporte pas javascript ou il est peut-être désactivé. <a href="https://unil.ch/voeux/sheep-it.html">Suivez ce lien</a> pour en savoir plus sur ce jeu vidéo UNIL.</p>
