--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 
 <body>
     <script src="vendor/resize-observer.min.js"></script>
-    <script src="vendor/kaboom.js"></script>
-    <script src="js/main.js" type="module"></script>
+    <script src="js/main.js" type="module" async></script>
     <noscript>
         <p style="margin-top: 10vh; text-align: center;">Oh non, votre navigateur ne supporte pas javascript ou il est peut-être désactivé. <a href="https://unil.ch/voeux/sheep-it.html">Suivez ce lien</a> pour en savoir plus sur ce jeu vidéo UNIL.</p>
     </noscript>
