--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <script src="js/main.js" type="module"></script>
     <noscript>
-        <p style="margin-top: 10vh; text-align: center;">Oh non, votre navigateur ne supporte pas javascript ou il est peut-être désactivé. <a href="https://unil.ch/voeux/sheep-it.html">Suivez ce lien</a> pour en savoir plus sur ce jeu vidéo UNIL.</p>
+        <p style="margin-top: 10vh; text-align: center;">Oh non, votre navigateur ne supporte pas javascript ou il est peut-être désactivé. <a href="https://unil.ch/voeux/2023/sheep-it.html">Suivez ce lien</a> pour en savoir plus sur ce jeu vidéo UNIL.</p>
     </noscript>
 
     <!-- Google tag (gtag.js) -->
